--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uLesson | No. 1 Learning App for Primary, Junior Secondary &amp; Senior Secondary school Students</title>
-    <link rel="stylesheet" href="../boot/bootstrapcss.css">
-    <link rel="stylesheet" href="..//css/ulesson.css"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="/boot/bootstrapcss.css">
+    <link rel="stylesheet" href="/css/ulesson.css"><link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,200&display=swap" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-expand-sm bg-light p-2 sticky-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="..//image/ulesson-logo.jpg" style="margin-left: 20px;"></a>
+              <a class="navbar-brand" href="#"><img src="/image/ulesson-logo.jpg" style="margin-left: 20px;"></a>
               <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                   <li class="nav-item">
